--- a/index.html
+++ b/index.html
@@ -228,7 +228,7 @@
       <div class="col-lg-6">
         <p>
           Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptas
-          corrupti, asperiores amet ea eius quos maiores autem qui possimus est
+          corrupti, asperiores ametsdfsdf ea eius quos maiores autem qui possimus est
           excepturi beatae vitae consequuntur dolor fuga? Libero incidunt iusto
           inventore.
         </p>
